refactor(tny-doc): 重构文档注释模块